# RayTracer

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
scripts/: generate-image.bat  generate-image.sh
src/: main.rs
src/hittables/: hit_record.rs  hittable.rs  hittable_list.rs  mod.rs  sphere.rs
src/input/: cli.rs
src/materials/: lambertian.rs  metallic.rs  mod.rs
src/math/: mod.rs  random.rs  ray.rs  vec3.rs  vec4.rs
src/output/: image.rs  mod.rs
src/rendering/: camera.rs  material.rs  mod.rs  sampling.rs
src/rendering/materials/: diffuse.rs  material.rs  metallic.rs  mod.rs
