[package]
name = "raytracing-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.10.0"
exr = "1.72.0"
flamegraph = "0.6.5"
clap = { version = "4.5.16", features = ["derive"] }

[profile.release]
debug = true
lto = true
opt-level = 3

[features]
parallel = []
debug_prints = []
